# Practicheskiy

./: 18zad  18zad.cpp  8zad.cpp
JAva/Animal/: Animal.java  Bird.java  Cat.java  Dog.java  Main.java
JAva/Phone/: Main.java  Phone.java
JAva/studing-java/src/com/studing/: Collection.java  Main.java  Massive.java  Math.java
JAva/ООП/: BancAccount.java  Main.java
My APP/Studing/src/com/Studing/: ContactForm.java  Main.java
project/auth_module/: CMakeLists.txt
project/auth_module/include/: db.h  oauth.h  routes.h  token.h  utils.h
project/auth_module/src/: db.cpp  main.cpp  oauth.cpp  routes.cpp  token.cpp
Практическая 4/: 18zad.py
Практическая 5/: 17zad.cpp
Практическая 6/: 18zad.cpp
телеграм Бот/: main.py
